<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:hint="@string/edit_text_text"
            android:text="@string/edit_text_text"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/textPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/text_person_name"
            android:hint="@string/text_person_name"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/textPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:autofillHints=""
            android:ems="10"
            android:inputType="phone"
            android:text="@string/text_phone"
            android:hint="@string/text_phone"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/textNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            android:text="@string/text_number"
            android:hint="@string/text_number"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/text_number"
            android:hint="@string/text_number"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/textEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/text_email_address"
            android:hint="@string/text_email_address"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/textUri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textUri"
            android:text="@string/text_uri"
            android:hint="@string/text_uri"
            android:textSize="@dimen/text_size" />

    </LinearLayout>
</ScrollView>