<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_end"
        android:checkedButton="@id/rb_task_1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_task_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_weight="1"
            android:text="@string/name_task_1" />

        <RadioButton
            android:id="@+id/rb_task_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_weight="1"
            android:text="@string/name_task_2" />

        <RadioButton
            android:id="@+id/rb_task_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
           android:layout_weight="1"
            android:text="@string/name_task_3" />
    </RadioGroup>

    <include
        android:id="@+id/inc_task_1"
        layout="@layout/task1"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <include
        android:id="@+id/inc_task_2"
        layout="@layout/task2"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <include
        android:id="@+id/inc_task_3"
        layout="@layout/task3"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
</LinearLayout>